# legendsio_discord

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/legendsio_discord/: __init__.py  bot.py  config.py
src/legendsio_discord/cogs/: template.py
src/legendsio_discord/database/: models.py
src/legendsio_discord/exceptions/: __init__.py
src/legendsio_discord/helpers/: checks.py  db_manager.py
tests/: test_legendsio_discord.py
