[tool.poetry]
name = "legendsio_discord"
version = "0.1.0"
description = "A Discord bot that provides helpful tools for free agents in the competitive CoD scene"
authors = ["Dylan Garrett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
